# langswap

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gradio  Makefile  Pipfile  README.md  alembic.ini  bench_asr_modal.py  build_test_upload.sh  check_chenger_pipeline.ipynb  debug_local.py  docker-compose.yml  entrypoint.sh  freeze.txt  gradio_demo.py  links_to_test_videos.txt  main.py  modal_app.py  overrides.gradio.txt  overrides.txt  pipeline_check.py  pyproject.toml  requirements-mac.txt  requirements.lock.txt  requirements.txt  serverless.py  test_input.json  test_quick.py
F5-TTS/: finetune_gradio.py  inference-cli.py  run_inf.sh
F5-TTS/model/: utils.py  utils_infer.py
alembic/: env.py
alembic/versions/: 50cedbf7a0ea_add_arrays_to_processed_object.py  7d360d4b9962_init.py  d4d9abaa5361_add_uuid_instead_of_public_id.py  e084f258c8a1_add_user_table.py
api/: database.py  main.py  settings.py
api/routers/: process.py
api/schemas/: schemas.py
api/utils/: common.py
api/utils/ml_processing/: tasks.py
docs/: ADVANCED.md  advanced.md  streaming_dubbing_design.md
langswap/: __init__.py  api.py  backends.json  backends.py  editor.py  hls.py  model_config.py  model_pool.py  streaming.py  translation_pipeline.py
langswap/file_repository/: __init__.py
langswap/ml/: video_dubbing_manager.py
langswap/ml/ffmpeg/: __init__.py
langswap/ml/speech_to_text_service/: __init__.py  _qwen_compat.py  asr_client.py  asr_openai_client.py  asr_qwen_client.py  asr_qwen_onnx_client.py  asr_remote_client.py  asr_types.py  asr_vad_client.py  speech_to_text_manager.py
langswap/ml/text_to_speech_service/: __init__.py  audio_dubbing_manager.py  demucs_client.py  tts_chatterbox_client.py  tts_client.py  tts_eleven_client.py  tts_eleven_vc_client.py  tts_f5_client.py  tts_manager.py  tts_omnivoice_client.py  tts_qwen3_client.py  tts_xtts_client.py  utils.py
langswap/ml/text_to_speech_service/configs/: omnivoice_vllm_stage.yaml
langswap/ml/translation_service/: Untitled.ipynb  __init__.py  translation_manager.py  translator_client.py  translator_llamacpp_client.py  translator_openai_client.py  translator_vllm_client.py
langswap/pipeline_models/: models.py
langswap/utils/: s3_client.py
langswap/utils/ml_processing/: lang2code_mapper.py
scripts/: bench_asr_modal.py  build_test_upload.sh  test_asr_service.py  test_quick.py  translate_videos_local.py  warm_and_commit.sh  warm_validate.py
services/qwen_asr_service/: Dockerfile  requirements.txt  server.py
src/: Makefile  __VERSION__  crud.py  database.py  enums.py  local_runner.py  main.py  model_config.py  models.py  run.py  settings.py  translation_pipeline.py
src/alembic/: env.py
src/api/: crud.py  database.py  models.py  settings.py
src/api/routers/: process.py  user.py
src/api/schemas/: schemas.py
src/api_client/: __init__.py
src/ffmpeg/: __init__.py
src/file_repository/: __init__.py
src/ml/: tasks.py  video_dubbing_manager.py
src/ml/api_client/: __init__.py
src/ml/ffmpeg/: __init__.py
src/ml/speech_to_text_service/: __init__.py  asr_client.py  vad_client.py
src/ml/text_to_speech_service/: Untitled.ipynb  __init__.py  audio_dubbing_manager.py  demucs_client.py  tts_client.py  tts_eleven_client.py  tts_f5_client.py  tts_fish_speech_client.py  tts_xtts_client.py  utils.py  video_dubbing_manager.py  voice_converter.py
src/ml/translation_service/: __init__.py  translator_client.py
src/pipeline_models/: __init__.py  celery_serializer_ext.py  models.py
src/routers/: process.py  user.py
src/schemas/: schemas.py
src/source_pipeline/: pipeline.py  utils_audio.py
src/source_pipeline/configs/: config_example.yaml
src/speech_to_text_service/: __init__.py  asr_client.py  vad_client.py
src/text_to_speech_service/: __init__.py  audio_dubbing_manager.py  demucs_client.py  tts_client.py
src/translation_service/: __init__.py  translator_client.py
src/utils/: common.py  logging.py  s3_client.py  youtube.py
src/utils/ml_processing/: lang2code_mapper.py  language_codes.json  tasks.py
tests/: conftest.py  runpod.py  test_asr.py  test_config.py  test_dispatch.py  test_ffmpeg.py  test_llm.py  test_srt.py  test_streaming.py  test_translation_iso.py  test_translation_vllm.py  test_tts.py  test_tts_f5.py  test_tts_omnivoice_vllm.py
tests/fixtures/: test_input.json
tools/: hls_preview.html  run_streaming_local.py
