[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langswap"
dynamic = ["version"]
description = "Video translation pipeline with speech-to-text, translation, and text-to-speech"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ilya Shigabeev", email = "ilya@langswap.app"}
]
dependencies = [
    "boto3",
    "python-dotenv",
    "huggingface_hub>=0.20.0",
    # Add other dependencies from requirements.txt
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
qwen3 = [
    "qwen-tts",
    "soundfile",
]

[project.scripts]
langswap = "langswap.cli:main"
langswap-test = "langswap.cli:test_translation"
langswap-download-models = "langswap.model_downloader:main"

[tool.setuptools.dynamic]
version = {file = "langswap/__VERSION__"}

[tool.setuptools.packages.find]
include = ["langswap*"]
exclude = ["tests*", "notebooks*"] 
#, "F5-TTS*", "coqui*", "resemble*"]
