[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langswap"
dynamic = ["version"]
description = "Video translation pipeline with speech-to-text, translation, and text-to-speech"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Ilya Shigabeev", email = "ilya@langswap.app"}
]

# Lightweight core, shared by every install variant (no torch / no GPU stack).
dependencies = [
    "boto3",
    "python-dotenv",
    "requests",
    "huggingface_hub>=0.20.0",
    "attrs",
    "cattrs",
    "numpy",
    "pandas",
    "tqdm",
    "soundfile",
    "pydub",
]

# uv is the only supported installer. One command per variant:
#   uv pip install -e ".[gpu]"          # full local GPU stack
#   uv pip install -e ".[api]"          # Mac/CPU, hosted APIs only
#   uv pip install -e ".[gpu,runpod]"   # GPU image + RunPod worker (Docker)
# The torch/llama-cpp wheel indexes are wired in [tool.uv] below, so no extra
# index flags or pre-install steps are needed.
[project.optional-dependencies]
# Mac / CPU / API-only — hosted APIs (OpenAI ASR + translation, ElevenLabs TTS)
# instead of the local-model stack. torch resolves from PyPI (CPU/MPS build).
api = [
    "torch",
    "torchaudio",
    "demucs @ git+https://github.com/shigabeev/demucs@9e454051dc5ed957b13525eaad82a2e74e8e5dcb",
    "pyrubberband",
    "silero-vad",
    "openai",
    "elevenlabs>=2.36.1",
    "gradio>=4.0.0",
]

# Full GPU install with local models (ASR/translation/TTS on-device).
# torch/torchaudio/torchcodec resolve from the CUDA 13 index (see [tool.uv]).
gpu = [
    "torch",
    "torchaudio",
    "torchcodec",
    "transformers==5.9.0",
    "vllm==0.21.0",
    "vllm-omni",
    "qwen-omni-utils",
    "accelerate",
    "safetensors>=0.4.3",
    "tokenizers>=0.22.0",
    "sentencepiece",
    "protobuf",
    "faster-whisper",
    "llama-cpp-python",
    "nvidia-cublas-cu12",
    "demucs @ git+https://github.com/shigabeev/demucs@9e454051dc5ed957b13525eaad82a2e74e8e5dcb",
    "pyrubberband",
    "silero-vad",
    "gradio>=4.0.0",
    # whisperx is optional: install it separately to enable speaker diarization.
    # Without it the pipeline runs single-speaker (skip_diarization default).
]

# RunPod serverless worker (serverless.py). The Docker image installs ".[gpu,runpod]".
runpod = ["runpod"]

# Modal deployment surface (modal_app.py), driven from a dev machine.
modal = ["modal", "fastapi"]

dev = [
    "pytest",
    "ruff",
]

# ── uv wheel-index wiring ─────────────────────────────────────────────────────
# torch/torchaudio/torchcodec for the gpu extra come from the CUDA 13 wheel index.
# llama-cpp-python comes from its prebuilt CUDA (cu124) wheel so n_gpu_layers=-1
# actually offloads to the GPU: Gemma-4-E2B + the isochrony loop runs many short
# generations per line, which is ~600x too slow on the CPU build (the cu124 wheel
# bundles its own CUDA runtime and coexists with the cu130 torch stack). The api
# extra's torch resolves from PyPI (CPU/MPS). The conflict declaration lets uv keep
# the two torch sources straight.
[tool.uv]
conflicts = [[{ extra = "api" }, { extra = "gpu" }]]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "llama-cpp-cu124"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", extra = "gpu" }]
torchaudio = [{ index = "pytorch-cu130", extra = "gpu" }]
torchcodec = [{ index = "pytorch-cu130", extra = "gpu" }]
llama-cpp-python = { index = "llama-cpp-cu124" }

[tool.setuptools.dynamic]
version = {file = "langswap/__VERSION__"}

[tool.setuptools.packages.find]
include = ["langswap*"]
exclude = ["tests*", "scripts*", "notebooks*"]

[tool.setuptools.package-data]
"langswap" = ["backends.json"]
"langswap.ml.text_to_speech_service" = ["configs/*.yaml"]
